# HVMx

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
.sprints/: sprint_1.md
.sprints/sprint_1/metrics/: loc_report.md
crates/hvmx-cli/: Cargo.toml
crates/hvmx-cli/src/: main.rs
crates/hvmx-core/: Cargo.toml
crates/hvmx-core/src/: book.rs  interact.rs  lib.rs  net.rs  numb.rs  port.rs
crates/hvmx-jit/: Cargo.toml
crates/hvmx-jit/src/: ir.rs  lib.rs  runtime.rs
crates/hvmx-jit/src/backend/: cpu.rs  mod.rs  vulkan.rs
crates/hvmx-jit/src/codegen/: mod.rs
crates/hvmx-memory/: Cargo.toml
crates/hvmx-memory/src/: lib.rs  prefetch.rs  tile.rs  unified.rs
crates/hvmx-scheduler/: Cargo.toml
crates/hvmx-scheduler/src/: adaptive.rs  lib.rs  partition.rs
docs/dor/: README.md
examples/: hvmx_automation.sh
scripts/: hvmx_sprint1_batch1.sh
scripts/sprint1/: hvmx_sprint1_batch2.sh  hvmx_sprint1_batch3.sh
