# ==============================================================================
# hvmx-jit - JIT Compiler
# ==============================================================================
# Authors: scoobiii & GOS3
# Date: 2024-12-28
# ==============================================================================

[package]
name = "hvmx-jit"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
hvmx-core = { path = "../hvmx-core" }
thiserror.workspace = true
anyhow.workspace = true

# GPU backends
vulkano = { version = "0.34", optional = true }

[features]
default = ["vulkan"]
vulkan = ["dep:vulkano"]

[dev-dependencies]
criterion.workspace = true
